# waft

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml  rustfmt.toml
.agents/skills/optimize/: SKILL.md
.agents/skills/review/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  pr-base-retarget.yml  promotion-gate.yml
benches/: bench_quic.rs  bench_transfer.rs
docs/: ai_review.md  bench_results.md  plan.md
docs/experiments/: transport_evaluation.md
scripts/: setup_github_protection.sh
src/: cli.rs  clipboard.rs  daemon.rs  discovery.rs  error.rs  identity.rs  lib.rs  main.rs  quic_send.rs  quic_transfer.rs  quic_transport.rs  send.rs  transfer.rs  trust.rs
tests/: test_cli_daemon.rs  test_clipboard.rs  test_discovery.rs  test_discovery_multicast.rs  test_identity.rs  test_perf.rs  test_transfer.rs  test_trust.rs
