[package]
name = "waft"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
socket2 = "0.5"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap_complete = "4.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "socket", "uio"] }

[lints.rust]
unsafe_code = "deny"
unused_imports = "warn"
dead_code = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
pedantic = "warn"
