[package]
name = "waft"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
socket2 = "0.6"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap_complete = "4.5"
rand_core = { version = "0.6", features = ["getrandom"]}
memmap2 = "0.9"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs", "socket", "uio"] }
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_transfer"
harness = false

[lints.rust]
unsafe_code = "deny"
unused_imports = "warn"
dead_code = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
pedantic = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
